--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = \"/home/ubuntu/musikalkemist/test.json\""
+    "DATA_PATH = \"/home/ubuntu/test.json\""
    ]
   },
   {
